# RobotArm

./: README.md
SimpleControlGui/: CMakeLists.txt  calibrationadjustmentdialog.cpp  calibrationadjustmentdialog.h  calibrationadjustmentdialog.ui  calibrationdata.cpp  calibrationdata.h  calibrationdialog.cpp  calibrationdialog.h  calibrationdialog.ui  calibrationdonedialog.cpp  calibrationdonedialog.h  calibrationdonedialog.ui  calibrationresultsdialog.cpp  calibrationresultsdialog.h  calibrationresultsdialog.ui  calibrationresultsgraph.cpp  calibrationresultsgraph.h  calibrationwizard.cpp  calibrationwizard.h  chessboard.cpp  chessboard.h  homeposition.cpp  homeposition.h  kinematics.cpp  kinematics.h  leastsquares.cpp  leastsquares.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  matrix2d.cpp  matrix2d.h  piecemover.cpp  piecemover.h  robotcontroller.cpp  robotcontroller.h  squarecalibrator.cpp  (+3 more)
SimpleControlGui/calfiles/: board.txt  cal.txt  home.txt
